--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -16,8 +16,8 @@
   
     \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,
 
-    \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2 EUV
-     fallen,
+    \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2
+     EUV fallen,
 
     \item durch natürliche Personen zur Ausübung ausschließlich persönlicher oder familiärer Tätigkeiten,
 
@@ -29,8 +29,8 @@
 
   \item Für die Verarbeitung personenbezogener Daten durch die Organe, Einrichtungen, Ämter und Agenturen der Union gilt
    die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte der Union, die diese
-   Verarbeitung personenbezogener Daten regeln, werden im Einklang mit Artikel 98 an die Grundsätze und Vorschriften
-   der vorliegenden Verordnung angepasst.
+   Verarbeitung personenbezogener Daten regeln, werden im Einklang mit Artikel 98\todo{Querverweis} an die Grundsätze
+   und Vorschriften der vorliegenden Verordnung angepasst.
 
   \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
    Artikel 12 bis 15 dieser Richtlinie zur Verantwortlichkeit der Vermittler unberührt.
@@ -39,3 +39,27 @@
 
 \addsec{Eigene Notizen}
 
+\begin{itemize}
+
+  \item Der Verweis auf \href
+   {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:12016M/TXT&qid=1659176223545&from=DE#d1e1808-1-1}
+   {Titel V Kapitel 2 EUV} in Ziffer 2a bezieht sich auf die gemeinsame Außen- und Sicherheitspolitik der
+   EU"=Mitgliedsstaaten.
+
+  \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32001R0045&qid=1659176445961&from=DE}
+   {Verordnung (EG) Nr. 45/2001} in Ziffer 3 hat den Schutz natürlicher Personen bei der Verarbeitung personenbezogener
+   Daten durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr zum Inhalt.
+
+  \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32000L0031&qid=1659176679229&from=DE}
+   {Richtlinie 2000/31/EG} ("`Richtlinie über den elektronischen Geschäftsverkehr"') regelt bestimmte rechtliche
+   Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
+   Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
+
+   \begin{itemize}
+     \item Reine Durchleitung (Artikel 12)
+     \item Caching (Artikel 13)
+     \item Hosting (Artikel 14)
+     \item Keine allgemeine Überwachungspflicht (Artikel 15)
+   \end{itemize}
+
+\end{itemize}
