--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -103,7 +103,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \end{enumerate}
 
   \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem Verantwortlichen
-   oder Auftragsverarbeiter schriftlich gemäß Artikel 27 bestellt wurde und den Verantwortlichen oder
+   oder Auftragsverarbeiter schriftlich gemäß Artikel 27\todo{Querverweis} bestellt wurde und den Verantwortlichen oder
    Auftragsverarbeiter in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten vertritt;
 
   \item „Unternehmen“ eine natürliche und juristische Person, die eine wirtschaftliche Tätigkeit ausübt, unabhängig von
@@ -119,7 +119,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    an einen Verantwortlichen oder Auftragsverarbeiter derselben Unternehmensgruppe oder derselben Gruppe von
    Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
 
-  \item „Aufsichtsbehörde“ eine von einem Mitgliedstaat gemäß Artikel 51 eingerichtete unabhängige staatliche Stelle;
+  \item „Aufsichtsbehörde“ eine von einem Mitgliedstaat gemäß Artikel 51\todo{Querverweis} eingerichtete unabhängige
+  staatliche Stelle;
 
   \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der Verarbeitung personenbezogener Daten betroffen ist, weil
 
@@ -166,3 +167,22 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 \end{enumerate}
 
 \addsec{Eigene Notizen}
+
+\begin{itemize}
+
+  \item zur Ziffer 12 -- klären: Liegt eine Verletzung des Schutzes nur dann vor, wenn ein tatsächlicher Vorfall
+  eingetroffen ist?
+
+  \item zur Ziffer 14 -- klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
+  aufgeschlüsselte Daten sein?
+
+  \item Die in Ziffer 25 referenzierte 
+   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32015L1535&qid=1659177673712&from=DE}{Richtlinie
+    (EU) 2015/1535} hat  ein Informationsverfahren auf dem Gebiet der technischen Vorschriften und der Vorschriften für
+    die Dienste der Informationsgesellschaft zum Gegenstand. Die referenzierte Begriffsbestimmung
+    für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt elektronisch im Fernabsatz und auf individuellen
+    Abruf eines Empfängers erbrachte Dienstleistung"'. 
+   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32015L1535&qid=1659177673712&from=DE#d1e32-10-1}
+    {Anhang 1} der Richtlinie enthält eine Beispielsammlung nicht unter die Richtlinie fallender Dienste.
+
+\end{itemize}
