Kapitel II mit Artikeln 5-11

--- a/DSGVO-Bearbeitung.tex
+++ b/DSGVO-Bearbeitung.tex
@@ -6,17 +6,24 @@
 
 \mainmatter
 \part{Allgemeine Bestimmungen}
+\label{part:1}
 \input{artikel/01}
 \input{artikel/02}
 \input{artikel/03}
 \input{artikel/04}
 
 \part{Grundsätze}
-
-
-
+\label{part:2}
+\input{artikel/05}
+\input{artikel/06}
+\input{artikel/07}
+\input{artikel/08}
+\input{artikel/09}
+\input{artikel/10}
+\input{artikel/11}
 
 \part{Rechte der betroffenen Person}
+\label{part:3}
 \addchap{Abschnitt 1 -- Transparenz und Modalitäten}
 
 \addchap{Abschnitt 2 -- Informationspflicht und Recht auf Auskunft zu personenbezogenen Daten}
@@ -30,6 +37,7 @@
 
 
 \part{Verantwortlicher und Auftragsverarbeiter}
+\label{part:4}
 
 \addchap{Abschnitt 1 -- Allgemeine Pflichten}
 
@@ -42,29 +50,36 @@
 
 
 \part{Übermittlungen personenbezogener Daten an Drittländer oder an internationale Organisationen}
+\label{part:5}
 
 
 \part{Unabhängige Aufsichtsbehörden}
+\label{part:6}
 
 \addchap{Abschnitt 1 -- Unabhängigkeit}
 \addchap{Abschnitt 2 -- Zuständigkeit, Aufgaben und Befugnisse}
 
 
 \part{Zusammenarbeit und Kohärenz}
+\label{part:7}
 
 \addchap{Abschnitt 1 -- Zusammenarbeit}
 \addchap{Abschnitt 2 -- Kohärenz}
 \addchap{Abschnitt 3 -- Europäischer Datenschutzausschuss}
 
 \part{Rechtsbehelfe, Haftung und Sanktionen}
+\label{part:8}
 
 
 \part{Vorschriften für besondere Verarbeitungssituationen}
+\label{part:9}
 
 \part{Delegierte Rechtsakte und Durchführungsrechtsakte}
+\label{part:10}
 
 
 \part{Schlussbestimmungen}
+\label{part:11}
 
 
 
