--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -9,31 +9,39 @@
   \item Diese Verordnung gilt für die ganz oder teilweise automatisierte Verarbeitung personenbezogener Daten sowie für
    die nichtautomatisierte Verarbeitung personenbezogener Daten, die in einem Dateisystem gespeichert sind oder
    gespeichert werden sollen.
+  \label{itm:02-1}
 
   \item Diese Verordnung findet keine Anwendung auf die Verarbeitung personenbezogener Daten
+  \label{itm:02-2}
 
   \begin{enumerate}
   
     \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,
+    \label{itm:02-2a}
 
     \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2
      EUV fallen,
+    \label{itm:02-2b}
 
     \item durch natürliche Personen zur Ausübung ausschließlich persönlicher oder familiärer Tätigkeiten,
+    \label{itm:02-2c}
 
     \item durch die zuständigen Behörden zum Zwecke der Verhütung, Ermittlung, Aufdeckung oder Verfolgung von Straftaten
      oder der Strafvollstreckung, einschließlich des Schutzes vor und der Abwehr von Gefahren für die öffentliche
      Sicherheit.
+    \label{itm:02-2d}
 
   \end{enumerate}
 
   \item Für die Verarbeitung personenbezogener Daten durch die Organe, Einrichtungen, Ämter und Agenturen der Union gilt
    die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte der Union, die diese
-   Verarbeitung personenbezogener Daten regeln, werden im Einklang mit Artikel 98\todo{Querverweis} an die Grundsätze
-   und Vorschriften der vorliegenden Verordnung angepasst.
+   Verarbeitung personenbezogener Daten regeln, werden im Einklang mit \hyperref[ch:98]{Artikel 98} an
+   die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.
+  \label{itm:02-3}
 
   \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
    Artikel 12 bis 15 dieser Richtlinie zur Verantwortlichkeit der Vermittler unberührt.
+  \label{itm:02-4}
 
 \end{enumerate}
 
@@ -43,14 +51,16 @@
 
   \item Der Verweis auf \href
    {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:12016M/TXT&qid=1659176223545&from=DE#d1e1808-1-1}
-   {Titel V Kapitel 2 EUV} in Ziffer 2a bezieht sich auf die gemeinsame Außen- und Sicherheitspolitik der
-   EU"=Mitgliedsstaaten.
+   {Titel V Kapitel 2 EUV} in \hyperref[itm:02-2a]{Absatz 2a} bezieht sich auf die gemeinsame Außen- und
+   Sicherheitspolitik der EU"=Mitgliedsstaaten.
 
   \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32001R0045&qid=1659176445961&from=DE}
-   {Verordnung (EG) Nr. 45/2001} in Ziffer 3 hat den Schutz natürlicher Personen bei der Verarbeitung personenbezogener
-   Daten durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr zum Inhalt.
+   {Verordnung (EG) Nr. 45/2001} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher Personen bei der
+   Verarbeitung personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr
+   zum Inhalt.
 
-  \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32000L0031&qid=1659176679229&from=DE}
+  \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte
+   \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32000L0031&qid=1659176679229&from=DE}
    {Richtlinie 2000/31/EG} ("`Richtlinie über den elektronischen Geschäftsverkehr"') regelt bestimmte rechtliche
    Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
    Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
