--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -9,23 +9,28 @@
   \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten, soweit diese im Rahmen der
    Tätigkeiten einer Niederlassung eines Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt,
    unabhängig davon, ob die Verarbeitung in der Union stattfindet.
+  \label{itm:03-1}
 
   \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten von betroffenen Personen, die
    sich in der Union befinden, durch einen nicht in der Union niedergelassenen Verantwortlichen oder
    Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
+  \label{itm:03-2}
 
   \begin{enumerate}
   
     \item betroffenen Personen in der Union Waren oder Dienstleistungen anzubieten, unabhängig davon, ob von diesen
      betroffenen Personen eine Zahlung zu leisten ist;
+    \label{itm:03-2a}
 
     \item das Verhalten betroffener Personen zu beobachten, soweit ihr Verhalten in der Union erfolgt.
+    \label{itm:03-2b}
 
   \end{enumerate}
 
   \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten durch einen nicht in der Union
    niedergelassenen Verantwortlichen an einem Ort, der aufgrund Völkerrechts dem Recht eines Mitgliedstaats
    unterliegt.
+  \label{itm:03-3}
 
 \end{enumerate}
 
