--- a/artikel/01.tex
+++ b/artikel/01.tex
@@ -6,14 +6,17 @@
 
 \begin{enumerate}
 
-\item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten
-und zum freien Verkehr solcher Daten.
+  \item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener
+   Daten und zum freien Verkehr solcher Daten.
+  \label{itm:01-1}
 
-\item Diese Verordnung schützt die Grundrechte und Grundfreiheiten natürlicher Personen und insbesondere deren Recht auf
-Schutz personenbezogener Daten.
+  \item Diese Verordnung schützt die Grundrechte und Grundfreiheiten natürlicher Personen und insbesondere deren Recht
+   auf Schutz personenbezogener Daten.
+  \label{itm:01-2}
 
-\item Der freie Verkehr personenbezogener Daten in der Union darf aus Gründen des Schutzes natürlicher Personen bei der
-Verarbeitung personenbezogener Daten weder eingeschränkt noch verboten werden.
+  \item Der freie Verkehr personenbezogener Daten in der Union darf aus Gründen des Schutzes natürlicher Personen bei
+   der Verarbeitung personenbezogener Daten weder eingeschränkt noch verboten werden.
+  \label{itm:01-3}
 
 \end{enumerate}
 
