Leerdateien angelegt und in Hauptdokument eingebunden

--- a/DSGVO-Bearbeitung.tex
+++ b/DSGVO-Bearbeitung.tex
@@ -24,63 +24,147 @@
 
 \part{Rechte der betroffenen Person}
 \label{part:3}
+
 \addchap{Abschnitt 1 -- Transparenz und Modalitäten}
+\input{artikel/12}
 
 \addchap{Abschnitt 2 -- Informationspflicht und Recht auf Auskunft zu personenbezogenen Daten}
-
+\input{artikel/13}
+\input{artikel/14}
+\input{artikel/15}
 
 \addchap{Abschnitt 3 -- Berichtigung und Löschung}
+\input{artikel/16}
+\input{artikel/17}
+\input{artikel/18}
+\input{artikel/19}
+\input{artikel/20}
 
 \addchap{Abschnitt 4 -- Widerspruchsrecht und automatisierte Entscheidungsfindung im Einzelfall}
+\input{artikel/21}
+\input{artikel/22}
 
 \addchap{Abschnitt 5 -- Beschränkungen}
-
+\input{artikel/23}
 
 \part{Verantwortlicher und Auftragsverarbeiter}
 \label{part:4}
 
 \addchap{Abschnitt 1 -- Allgemeine Pflichten}
+\input{artikel/24}
+\input{artikel/25}
+\input{artikel/26}
+\input{artikel/27}
+\input{artikel/28}
+\input{artikel/29}
+\input{artikel/30}
+\input{artikel/31}
 
 \addchap{Abschnitt 2 -- Sicherheit personenbezogener Daten}
+\input{artikel/32}
+\input{artikel/33}
+\input{artikel/34}
+
 \addchap{Abschnitt 3 -- Datenschutz-Folgenabschätzung und vorherige Konsultation}
+\input{artikel/35}
+\input{artikel/36}
+
 \addchap{Abschnitt 4 -- Datenschutzbeauftragter}
+\input{artikel/37}
+\input{artikel/38}
+\input{artikel/39}
+
 \addchap{Abschnitt 5 -- Verhaltensregeln und Zertifizierung}
-
-
-
+\input{artikel/40}
+\input{artikel/41}
+\input{artikel/42}
+\input{artikel/43}
 
 \part{Übermittlungen personenbezogener Daten an Drittländer oder an internationale Organisationen}
 \label{part:5}
-
+\input{artikel/44}
+\input{artikel/45}
+\input{artikel/46}
+\input{artikel/47}
+\input{artikel/48}
+\input{artikel/49}
+\input{artikel/50}
 
 \part{Unabhängige Aufsichtsbehörden}
 \label{part:6}
 
 \addchap{Abschnitt 1 -- Unabhängigkeit}
-\addchap{Abschnitt 2 -- Zuständigkeit, Aufgaben und Befugnisse}
+\input{artikel/51}
+\input{artikel/52}
+\input{artikel/53}
+\input{artikel/54}
 
+\addchap{Abschnitt 2 -- Zuständigkeit, Aufgaben und Befugnisse}
+\input{artikel/55}
+\input{artikel/56}
+\input{artikel/57}
+\input{artikel/58}
+\input{artikel/59}
 
 \part{Zusammenarbeit und Kohärenz}
 \label{part:7}
 
 \addchap{Abschnitt 1 -- Zusammenarbeit}
+\input{artikel/60}
+\input{artikel/61}
+\input{artikel/62}
+
 \addchap{Abschnitt 2 -- Kohärenz}
+\input{artikel/63}
+\input{artikel/64}
+\input{artikel/65}
+\input{artikel/66}
+\input{artikel/67}
+
 \addchap{Abschnitt 3 -- Europäischer Datenschutzausschuss}
+\input{artikel/68}
+\input{artikel/69}
+\input{artikel/70}
+\input{artikel/71}
+\input{artikel/72}
+\input{artikel/73}
+\input{artikel/74}
+\input{artikel/75}
+\input{artikel/76}
 
 \part{Rechtsbehelfe, Haftung und Sanktionen}
 \label{part:8}
-
+\input{artikel/77}
+\input{artikel/78}
+\input{artikel/79}
+\input{artikel/80}
+\input{artikel/81}
+\input{artikel/82}
+\input{artikel/83}
+\input{artikel/84}
 
 \part{Vorschriften für besondere Verarbeitungssituationen}
 \label{part:9}
+\input{artikel/85}
+\input{artikel/86}
+\input{artikel/87}
+\input{artikel/88}
+\input{artikel/89}
+\input{artikel/90}
+\input{artikel/91}
 
 \part{Delegierte Rechtsakte und Durchführungsrechtsakte}
 \label{part:10}
-
+\input{artikel/92}
+\input{artikel/93}
 
 \part{Schlussbestimmungen}
 \label{part:11}
-
-
+\input{artikel/94}
+\input{artikel/95}
+\input{artikel/96}
+\input{artikel/97}
+\input{artikel/98}
+\input{artikel/99}
 
 \end{document}
