--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -38,7 +38,7 @@
 \renewcaptionname{ngerman}{\chaptername}{Artikel}
 \renewcommand*{\chapterformat}{%
   \mbox{\chapapp{\nobreakspace}\thechapter{} -- }}
-
+\RedeclareSectionCommand[style=section]{chapter}
 
 % ---------------------------------------------------------------------------------------------------------------------
 % Typographie
