--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -78,9 +78,9 @@
   \item Beruht die Verarbeitung zu einem anderen Zweck als zu demjenigen, zu dem die personenbezogenen Daten erhoben
    wurden, nicht auf der Einwilligung der betroffenen Person oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
-   der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche —
+   der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche --
    um festzustellen, ob die Verarbeitung zu einem anderen Zweck mit demjenigen, zu dem die personenbezogenen Daten
-   ursprünglich erhoben wurden, vereinbar ist — unter anderem
+   ursprünglich erhoben wurden, vereinbar ist -- unter anderem
   \label{itm:06-4}
 
   \begin{enumerate}
