--- a/artikel/11.tex
+++ b/artikel/11.tex
@@ -14,7 +14,7 @@
 
   \item Kann der Verantwortliche in Fällen gemäß \hyperref[itm:11-1]{Absatz 1} des vorliegenden Artikels nachweisen,
    dass er nicht in der Lage ist, die betroffene Person zu identifizieren, so unterrichtet er die betroffene Person
-   hierüber, sofern möglich. In diesen Fällen finden die \hyperref[ch:15]{Artikel 15} bis \hyperref[ch:20]{20} keine
+   hierüber, sofern möglich. In diesen Fällen finden die Artikel \hyperref[ch:15]{15} bis \hyperref[ch:20]{20} keine
    Anwendung, es sei denn, die betroffene Person stellt zur Ausübung ihrer in diesen Artikeln niedergelegten Rechte
    zusätzliche Informationen bereit, die ihre Identifizierung ermöglichen.
   \label{itm:11-2}
