--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -39,6 +39,7 @@
 \renewcommand*{\chapterformat}{%
   \mbox{\chapapp{\nobreakspace}\thechapter{} -- }}
 \RedeclareSectionCommand[style=section]{chapter}
+\usepackage{enumitem}
 
 % ---------------------------------------------------------------------------------------------------------------------
 % Typographie
