--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -43,7 +43,7 @@
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
      einer derartigen Verarbeitung für die betroffene Person.
-    \label{itm:15-1a}
+    \label{itm:15-1h}
 
   \end{enumerate}
 
@@ -59,17 +59,18 @@
    angibt.
   \label{itm:15-3}
 
-  \item Das Recht auf Erhalt einer Kopie gemäß \hyperref[itm:15-1b]{Absatz 1b} darf die Rechte und Freiheiten anderer
-  Personen nicht beeinträchtigen.
+  \item Das Recht auf Erhalt einer Kopie gemäß \sout{Absatz 1b} \hyperref[itm:15-3]{Absatz 3} darf die Rechte und
+   Freiheiten anderer Personen nicht beeinträchtigen.
   \label{itm:15-4}
 
 \end{enumerate}
 
 \addsec{Eigene Notizen}
 
-\begin{enumerate}
+\begin{itemize}
 
-  \item Sollte die Referenz in \hyperref[itm:15-4]{Absatz 4} nicht eher auf Absatz 1c zeigen?
+  \item Der deutsche Originaltext verweist in \hyperref[itm:15-4]{Absatz 4} auf Absatz 1b, was inhaltlich nicht sinnvoll
+   ist. Der englische und französische Text verweisen beide auf Absatz 3, was im Text oben korrigiert wurde.
 
-\end{enumerate}
+\end{itemize}
 
