--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -18,7 +18,7 @@
     \label{itm:17-1a}
 
     \item Die betroffene Person widerruft ihre Einwilligung, auf die sich die Verarbeitung gemäß \hyperref[itm:06-1a]
-     {Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm_09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt
+     {Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt
      an einer anderweitigen Rechtsgrundlage für die Verarbeitung.
     \label{itm:17-1b}
 
