--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -41,7 +41,7 @@
      Verantwortung für das Kind einzuholen ist;
     \label{itm:40-2g}
 
-    \item die Maßnahmen und Verfahren gemäß den Artikeln \hyperref[itm:]{24} und \hyperref[itm:]{25} und die Maßnahmen
+    \item die Maßnahmen und Verfahren gemäß den Artikeln \hyperref[ch:24]{24} und \hyperref[ch:25]{25} und die Maßnahmen
      für die Sicherheit der Verarbeitung gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
@@ -62,7 +62,7 @@
   \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden Verantwortlichen oder Auftragsverarbeiter
    können Verhaltensregeln, die gemäß \hyperref[itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und
    gemäß \hyperref[itm:40-9]{Absatz 9 des vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
-   Verantwortlichen oder Auftragsverarbeitern, die gemäß \hyperref[ch:03]{Artikel 3} nicht unter diese Verordnung
+   Verantwortlichen oder Auftragsverarbeitern, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
    fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung personenbezogener Daten an Drittländer
    oder internationale Organisationen nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
    bieten. Diese Verantwortlichen oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich
