--- a/artikel/51.tex
+++ b/artikel/51.tex
@@ -13,7 +13,7 @@
   \label{itm:51-1}
 
   \item Jede Aufsichtsbehörde leistet einen Beitrag zur einheitlichen Anwendung dieser Verordnung in der gesamten Union.
-   Zu diesem Zweck arbeiten die Aufsichtsbehörden untereinander sowie mit der Kommission gemäß \hyperref[part7]
+   Zu diesem Zweck arbeiten die Aufsichtsbehörden untereinander sowie mit der Kommission gemäß \hyperref[part:7]
    {Kapitel VII} zusammen.
   \label{itm:51-2}
 
