--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -63,7 +63,7 @@
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die Übermittlungen
-     personenbezogener Daten gemäß \hyperref[itm:49-1]{Artikel 49 Absatz 1};
+     personenbezogener Daten gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
     \label{itm:70-1j}
 
     \item Ausarbeitung von Leitlinien für die Aufsichtsbehörden in Bezug auf die Anwendung von Maßnahmen nach \hyperref
