--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -33,7 +33,7 @@
    oder ernsthaft beeinträchtigen und solche Ausnahmen für die Erfüllung dieser Zwecke notwendig sind.
   \label{itm:89-3}
 
-  \item Dient die in den Absätzen \hyperref[itm:89-2]{2} und \hyperref[ch:89-3]{3} genannte Verarbeitung gleichzeitig
+  \item Dient die in den Absätzen \hyperref[itm:89-2]{2} und \hyperref[itm:89-3]{3} genannte Verarbeitung gleichzeitig
    einem anderen Zweck, gelten die Ausnahmen nur für die Verarbeitung zu den in diesen Absätzen genannten Zwecken.
   \label{itm:89-4}
 
