--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -52,6 +52,7 @@
 \usepackage{microtype}
 \hbadness=10001
 \vbadness=10001
+\usepackage{ulem}
 
 
 % ---------------------------------------------------------------------------------------------------------------------
@@ -97,8 +98,8 @@
 % ---------------------------------------------------------------------------------------------------------------------
 % Verzeichnisse, Glossar und Abkürzungsverzeichnis
 \usepackage{imakeidx}                  % Indexgenerierung + Eintrag in TOC
-\setcounter{secnumdepth}{4}       % Wie "tief" sollen Nummern vergeben werden?
-\setcounter{tocdepth}{2}          % Wieviele Ebenen sollen ins Inhaltsverzeichnis?
+%\setcounter{secnumdepth}{4}       % Wie "tief" sollen Nummern vergeben werden?
+\setcounter{tocdepth}{0} % only parts and chapters
 
 
 % ---------------------------------------------------------------------------------------------------------------------
