--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -25,7 +25,7 @@
    Verarbeitung, die Art der personenbezogenen Daten, die Kategorien betroffener Personen und die Pflichten und Rechte
    des Verantwortlichen festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
    dass der Auftragsverarbeiter
-  \label{itm:28-3}
+  \label{itm:28-3-1}
 
   \begin{enumerate}
   
@@ -35,51 +35,54 @@
      verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem Verantwortlichen diese rechtlichen
      Anforderungen vor der Verarbeitung mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
      wichtigen öffentlichen Interesses verbietet;
-    \label{itm:28-3a}
+    \label{itm:28-3-1a}
 
     \item gewährleistet, dass sich die zur Verarbeitung der personenbezogenen Daten befugten Personen zur
      Vertraulichkeit verpflichtet haben oder einer angemessenen gesetzlichen Verschwiegenheitspflicht unterliegen;
-    \label{itm:28-3b}
+    \label{itm:28-3-1b}
 
     \item alle gemäß \hyperref[ch:32]{Artikel 32} erforderlichen Maßnahmen ergreift;
-    \label{itm:28-3c}
+    \label{itm:28-3-1c}
 
     \item die in den Absätzen \hyperref[itm:28-2]{2} und \hyperref[itm:28-4]{4} genannten Bedingungen für die
      Inanspruchnahme der Dienste eines weiteren Auftragsverarbeiters einhält;
-    \label{itm:28-3d}
+    \label{itm:28-3-1d}
 
     \item angesichts der Art der Verarbeitung den Verantwortlichen nach Möglichkeit mit geeigneten technischen und
      organisatorischen Maßnahmen dabei unterstützt, seiner Pflicht zur Beantwortung von Anträgen auf Wahrnehmung der in
      \hyperref[part:3]{Kapitel III} genannten Rechte der betroffenen Person nachzukommen;
-    \label{itm:28-3e}
+    \label{itm:28-3-1e}
 
     \item unter Berücksichtigung der Art der Verarbeitung und der ihm zur Verfügung stehenden Informationen den
      Verantwortlichen bei der Einhaltung der in den Artikeln \hyperref[ch:32]{32} bis \hyperref[ch:36]{36} genannten
      Pflichten unterstützt;
-    \label{itm:28-3f}
+    \label{itm:28-3-1f}
 
     \item nach Abschluss der Erbringung der Verarbeitungsleistungen alle personenbezogenen Daten nach Wahl des
      Verantwortlichen entweder löscht oder zurückgibt, sofern nicht nach dem Unionsrecht oder dem Recht der
      Mitgliedstaaten eine Verpflichtung zur Speicherung der personenbezogenen Daten besteht;
-    \label{itm:28-3g}
+    \label{itm:28-3-1g}
 
     \item dem Verantwortlichen alle erforderlichen Informationen zum Nachweis der Einhaltung der in diesem Artikel
      niedergelegten Pflichten zur Verfügung stellt und Überprüfungen -- einschließlich Inspektionen –, die vom
      Verantwortlichen oder einem anderen von diesem beauftragten Prüfer durchgeführt werden, ermöglicht und dazu
      beiträgt.
-    \label{itm:28-3h}
+    \label{itm:28-3-1h}
 
   \end{enumerate}
 
-  Mit Blick auf \hyperref[itm:28-1h]{Unterabsatz 1 Buchstabe h} informiert der Auftragsverarbeiter den Verantwortlichen
+  \phantomsection
+  Mit Blick auf \hyperref[itm:28-3-1h]{Unterabsatz 1 Buchstabe h} informiert der Auftragsverarbeiter den
+  Verantwortlichen
   unverzüglich, falls er der Auffassung ist, dass eine Weisung gegen diese Verordnung oder gegen andere
   Datenschutzbestimmungen der Union oder der Mitgliedstaaten verstößt.
+  \label{itm:28-3-2}
 
   \item Nimmt der Auftragsverarbeiter die Dienste eines weiteren Auftragsverarbeiters in Anspruch, um bestimmte
    Verarbeitungstätigkeiten im Namen des Verantwortlichen auszuführen, so werden diesem weiteren Auftragsverarbeiter im
    Wege eines Vertrags oder eines anderen Rechtsinstruments nach dem Unionsrecht oder dem Recht des betreffenden
    Mitgliedstaats dieselben Datenschutzpflichten auferlegt, die in dem Vertrag oder anderen Rechtsinstrument zwischen
-   dem Verantwortlichen und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3]{Absatz 3} festgelegt sind, wobei
+   dem Verantwortlichen und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
    insbesondere hinreichende Garantien dafür geboten werden muss, dass die geeigneten technischen und organisatorischen
    Maßnahmen so durchgeführt werden, dass die Verarbeitung entsprechend den Anforderungen dieser Verordnung erfolgt.
    Kommt der weitere Auftragsverarbeiter seinen Datenschutzpflichten nicht nach, so haftet der erste
@@ -94,24 +97,25 @@
   \label{itm:28-5}
 
   \item Unbeschadet eines individuellen Vertrags zwischen dem Verantwortlichen und dem Auftragsverarbeiter kann der
-   Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3]{3} und \hyperref[itm:28-4]{4} des
+   Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]{4} des
    vorliegenden Artikels ganz oder teilweise auf den in den Absätzen \hyperref[itm:28-7]{7} und \hyperref[itm:28-8]
    {8} des vorliegenden Artikels genannten Standardvertragsklauseln beruhen, auch wenn diese Bestandteil einer dem
    Verantwortlichen oder dem Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43}
    erteilten Zertifizierung sind.
   \label{itm:28-6}
 
-  \item Die Kommission kann im Einklang mit dem Prüfverfahren gemäß \hyperref[itm:87-2]{Artikel 87 Absatz 2}
-   Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3]{3} und \hyperref[itm:28-4]{4} des
-   vorliegenden Artikels genannten Fragen festlegen.
+  \item Die Kommission kann im Einklang mit dem Prüfverfahren gemäß \sout{Artikel 87} \hyperref[itm:93-2]{Artikel 93
+   Absatz 2} Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]
+   {4} des vorliegenden Artikels genannten Fragen festlegen.
   \label{itm:28-7}
 
   \item Eine Aufsichtsbehörde kann im Einklang mit dem Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63}
-   Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3]{3} und \hyperref[itm:28-4]{4} des
+   Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]{4} des
    vorliegenden Artikels genannten Fragen festlegen.
   \label{itm:28-8}
 
-  \item Der Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3]{3} und \hyperref[itm:28-4]
+  \item Der Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3-1]{3} und \hyperref
+  [itm:28-4]
    {4} ist schriftlich abzufassen, was auch in einem elektronischen Format erfolgen kann.
   \label{itm:28-9}
 
@@ -123,4 +127,12 @@
 \end{enumerate}
 
 \addsec{Eigene Notizen}
+
+\begin{itemize}
+
+  \item Der deutsche Originaltext verweist in \hyperref[itm:28-7]{Absatz 7} auf Artikel 87 Absatz 2. Dieser Artikel hat
+  allerdings keine Absatzunterteilung. Der englische und französische Text verweisen beide auf Artikel 93, was im Text
+  oben korrigiert wurde.
+
+\end{itemize}
 
